--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ htaccess code : Header append Vary User-Agent -->
   },
   {
     "@type": "Question",
-    "name": "Persyaratan Apa Saja Yang diButuhkan Untuk Menjadi Member SLOT138?",
+    "name": "Persyaratan Apa Saja Yang diButuhkan Untuk Menjadi Member?",
     "acceptedAnswer": {
       "@type": "Answer",
       "text": "Persyaratan yang dibutuhkan untuk menjadi bagian dari member kami yaitu, kalian bisa menyiapkan KTP, dan Buku Rekening saja. Dengan kalian sudah menyiapkan kedua tersebut maka Anda sudah bisa mendaftar, dengan hanya 1 ID permainan saja anda bisa merasakan keseluruhan permainan judi yang kami tawarkan."
