--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:1
 			<div class="col-md-4 mb-2">				
 				<a class="social-card mt-2" href="https://wa.me/85577270059" rel="nofollow noopener noreferrer" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/s2pVbkL/whatsapp.png" alt="Whatsapp Slot Online"></amp-img>WHATSAPP</a>
 				<a class="social-card mt-2" href="https://direct.lc.chat/13876149/" rel="nofollow noopener noreferrer" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/D8GdpYd/livechat.png" alt="LIVECHAT Slot Online"></amp-img>LIVECHAT</a>
-				<a class="social-card mt-2 anim blink-me" href="http://bugs.cherokee-project.com/Pragmatic.html" target="_blank" rel="nofollow noreferrer"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/rFFjvbW/register.png" alt="RTP Slot Pulsa"></amp-img>RTP TINGGI</a>
+				<a class="social-card mt-2 anim blink-me" href="http://bugs.cherokee-project.com/Pragmatic.html" target="_blank"><amp-img class="align-middle" style="margin-right: 15px;" width="57px" height="57px" src="https://i.ibb.co/rFFjvbW/register.png" alt="RTP Slot Pulsa"></amp-img>RTP TINGGI</a>
 			</div>
 		</div>
 	</div>	
