--- a/Pragmatic.html
+++ b/Pragmatic.html
@@ -63,6 +63,9 @@
             z-index:100;
             }
     </style>
+    <script>
+        document.getElementById("current_date").innerHTML = Date();
+    </script>
 </head>
 
 <body>
@@ -82,7 +85,7 @@
 </a>
                 </div>
             </div>           
-
+            <div id="current_date"></div>
             <div class="title">
             </div>
             <section class="slot">
