--- a/Pragmatic.html
+++ b/Pragmatic.html
@@ -63,9 +63,6 @@
             z-index:100;
             }
     </style>
-    <script>
-        document.getElementById("current_date").innerHTML = Date();
-    </script>
 </head>
 
 <body>
@@ -85,7 +82,7 @@
 </a>
                 </div>
             </div>           
-            <div id="current_date"></div>
+            <h2 id="displayDateTime"></h2>
             <div class="title">
             </div>
             <section class="slot">
@@ -2801,6 +2798,17 @@
         <a href="https://api.whatsapp.com/send?phone=85577270059" rel='nofollow noopener' target="_blank"><img src="https://i.ibb.co/wBMhXn9/whatsapp.png" class="wabutton" alt="Chat whatsapp Akun365"></a>
         <script src="js/Pragmatic.js"></script>
         <script src="js/slide.js"></script>
+        <script type="text/javascript">
+              var today = new Date();
+              var day = today.getDay();
+              var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
+              var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+              var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+              var dateTime = date+' '+time;
+
+              document.getElementById("displayDateTime").innerHTML = dateTime + ' <br> Day :- ' + daylist[day];
+
+      </script>
 </body>
 
 </html>
