--- a/Pragmatic.html
+++ b/Pragmatic.html
@@ -82,7 +82,7 @@
 </a>
                 </div>
             </div>           
-            <h2 id="displayDateTime"></h2>
+            <h3 id="displayDateTime"></h3>
             <div class="title">
             </div>
             <section class="slot">
@@ -2802,11 +2802,11 @@
               var today = new Date();
               var day = today.getDay();
               var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
-              var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
-              var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-              var dateTime = date+' '+time;
+              var date = today.getDate()+'-'+(today.getMonth()+1)+'-'+today.getFullYear();
+              //var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+              var dateTime = date;
 
-              document.getElementById("displayDateTime").innerHTML = dateTime + ' <br> Day :- ' + daylist[day];
+              document.getElementById("displayDateTime").innerHTML = daylist[day] + ', ' + dateTime;
 
       </script>
 </body>
