--- a/Pragmatic.html
+++ b/Pragmatic.html
@@ -2801,11 +2801,11 @@
         <script type="text/javascript">
               var today = new Date();
               var day = today.getDay();
-              var month = today.getMonth()+1;
+              var month = today.getMonth();
               var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
               var monthArr = ["January", "February","March", "April", "May", "June", "July", "August", "September", "October", "November","December"];
               month = monthArr[month];
-              var date = today.getDate()+'-'+month+'-'+today.getFullYear();
+              var date = today.getDate()+' '+month+' '+today.getFullYear();
               //var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
               var dateTime = date;
 
