--- a/Pragmatic.html
+++ b/Pragmatic.html
@@ -82,7 +82,7 @@
 </a>
                 </div>
             </div>           
-            <h3 id="displayDateTime"></h3>
+            <h3 style="color: #ffffff; font-weight: bold;" id="displayDateTime"></h3>
             <div class="title">
             </div>
             <section class="slot">
@@ -2803,14 +2803,12 @@
               var day = today.getDay();
               var month = today.getMonth();
               var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
-              var monthArr = ["January", "February","March", "April", "May", "June", "July", "August", "September", "October", "November","December"];
+              var monthArr = ["Januari", "Februari","Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November","Desember"];
               month = monthArr[month];
               var date = today.getDate()+' '+month+' '+today.getFullYear();
               //var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
               var dateTime = date;
-
               document.getElementById("displayDateTime").innerHTML = daylist[day] + ', ' + dateTime;
-
       </script>
 </body>
 
